[tool.poetry]
name = "city-business-search"
version = "0.1.0"
description = "Python project that collects data from business in an area"
authors = ["Diego Alvarez <diesazul96@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4"
googlemaps = "^4.10.0"
pydantic = "^2.11.3"
pydantic-settings = "^2.9.1"
flake8 = "^7.2.0"
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
pytest-cov = "^6.1.1"
coverage = "^7.8.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
bandit = "^1.8.3"
radon = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
